WikiaMobile: silly fix for mobile trobbler on firefox
git-svn-id: svn+ssh://svn.wikia-code.com/svn/wikia/trunk@48883 e846bd91-c042-42a7-a218-4b65e2c1904d

--- a/extensions/wikia/WikiaMobile/css/WikiaMobile.scss
+++ b/extensions/wikia/WikiaMobile/css/WikiaMobile.scss
@@ -149,10 +149,10 @@ blockquote {
 
 @-moz-keyframes rotate {
 	0% {
-		-webkit-transform: rotate(0deg);
+		-moz-transform: rotate(0deg);
 	}
 	100% {
-		-webkit-transform: rotate(360deg);
+		-moz-transform: rotate(360deg);
 	}
 }
 
